--- a/urdf2model/CMakeLists.txt
+++ b/urdf2model/CMakeLists.txt
@@ -34,8 +34,8 @@
 
 
 # for linking directories (as the -L flag in gcc)
-  find_library(CASADI_LIB casadi HINTS ${SRC_DIR}/lib)
-  # find_library(CASADI_LIB casadi HINTS ${CASADI_DIR})
+  # find_library(CASADI_LIB casadi HINTS ${SRC_DIR}/lib)
+  find_library(CASADI_LIB casadi HINTS ${CASADI_DIR}/lib)
   # set(casadi_DIR /home/alejandro/phd_software/casadi_source/build)
   # find_package(casadi REQUIRED)
 
